app/main/default/objects/LocalFlosum__FL_Upload_Manifest__c/LocalFlosum__FL_Upload_Manifest__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Commit_Status__c</fullName>
        <label>Commit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safe To Commit</fullName>
                </value>
                <value>
                    <fullName>Not To Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalFlosum__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Upload_Log__c</fullName>
        <label>Upload Log</label>
        <referenceTo>LocalFlosum__FL_Upload_Log__c</referenceTo>
        <relationshipLabel>Upload Manifest</relationshipLabel>
        <relationshipName>Upload_Manifest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__isPure__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isPure</label>
        <type>Checkbox</type>
    </fields>
    <label>Upload Manifest</label>
    <nameField>
        <displayFormat>UM-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Upload Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload Manifest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>