app/main/default/objects/LocalFlosum__FL_Upload_Manifest__c/fields/LocalFlosum__Commit_Status__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Commit_Status__c</fullName>
        <label>Commit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safe To Commit</fullName>
                </value>
                <value>
                    <fullName>Not To Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>