app/main/default/objects/LocalFlosum__FL_Upload_Manifest__c/fields/LocalFlosum__File_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>