app/main/default/objects/LocalFlosum__FL_Upload_Manifest__c/fields/LocalFlosum__Reason__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>