app/main/default/objects/LocalFlosum__FL_Upload_Manifest__c/fields/LocalFlosum__Upload_Log__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Upload_Log__c</fullName>
        <label>Upload Log</label>
        <referenceTo>LocalFlosum__FL_Upload_Log__c</referenceTo>
        <relationshipLabel>Upload Manifest</relationshipLabel>
        <relationshipName>Upload_Manifest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>